[package]
authors = ["Tsiry Sandratraina <tsiry.sndr@rocksky.app>"]
categories = ["command-line-utilities"]
description = "Browse and listen to thousands of radio stations across the globe right from your terminal 🌎 📻 🎵✨"
edition = "2021"
keywords = ["radio", "api", "tokio", "web", "tunein"]
license = "MIT"
name = "tunein-cli"
readme = "README.md"
repository = "https://github.com/tsirysndr/tunein-cli"
version = "0.7.0"

[[bin]]
name = "tunein"
path = "src/main.rs"

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
  "dpkg --add-architecture $CROSS_DEB_ARCH",
  "apt-get update && apt-get --assume-yes install libasound2-dev libasound2-dev:$CROSS_DEB_ARCH protobuf-compiler",
]

[profile.release]
codegen-units = 1
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7"
actix-web = "4"
anyhow = "1.0.69"
async-graphql = "7"
async-graphql-actix-web = "7"
async-trait = "0.1.85"
clap = "3.2.20"
crossterm = "0.27.0"
derive_more = "0.99.17"
futures = "0.3.26"
futures-util = "0.3.26"
hyper = { version = "0.14.23", features = [
  "client",
  "stream",
  "tcp",
  "http1",
  "http2",
] }
m3u = "1.0.0"
# libc 0.2.178 changed NetBSD's kevent.udata to *mut c_void, which breaks
# mio 0.8 (crossterm, no fixed release) and mio 1.0.3 on the NetBSD builds.
libc = "=0.2.177"
mime_guess = "2"
owo-colors = "3.5.0"
directories = "5.0.1"
pls = "0.2.2"
prost = "0.13.2"
radiobrowser = { version = "0.6.1", features = [
  "default-rustls",
], default-features = false }
ratatui = "0.26.1"
regex = "1.11.1"
rockbox-dsp = "0.2"
rust-embed = "8"
reqwest = { version = "0.11.14", features = [
  "blocking",
  "rustls-tls",
], default-features = false }
rodio = { version = "0.20", default-features = false }
rustfft = "6.2.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.117"
surf = { version = "2.3.2", features = [
  "h1-client-rustls",
], default-features = false }
symphonia = { version = "0.5.1", features = [
  "aac",
  "alac",
  "mp3",
  "isomp4",
  "flac",
  "ogg",
  "vorbis",
] }
termion = "2.0.1"
thiserror = "1.0.58"
toml = "0.8"
tokio = { version = "1.36.0", features = [
  "tokio-macros",
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tonic-web = "0.12.3"
tunein = "0.1.4"
url = "2.3.1"
souvlaki = "0.8.3"

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
mockito = "1"
